Added Google Sign IN

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 BROADCASTER_USERNAME=username
 BROADCASTER_POSTING_WIF=5JRPH...
 BROADCAST_URL=https://api.hive.blog
+JWT_POSTING_SECRET_KEY=567fghjhh....
+JWT_LOGIN_SECRET_KEY=tggcbe....
+USERS_REDIS_URL=redis://redis
+GOOGLE_CLIENT_ID_WEB=hivesso
+GOOGLE_CLIENT_ID_ANDROID=dasdas
+GOOGLE_CLIENT_ID_IOS=hijjkl
+CACHE_REDIS_URL=redis://redis
