--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.1.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "redis": "^3.0.2",
